# fastapi-alembic-folder-struct

./: main.py  pyproject.toml
models/: user.py
routes/: user.py  users.py
schemas/: user.py
