[tool.poetry]
name = "fastapiproject-coursenowy"
version = "0.1.0"
description = ""
authors = ["MaciejKrawczyk <kontakt.maciejkrawczyk@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapiproject_coursenowy"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.44"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
